--- a/sources/첫째마당 소스/2장/2장 미션/test_1_1_test.html
+++ b/sources/첫째마당 소스/2장/2장 미션/test_1_1_test.html
@@ -8,6 +8,11 @@
 	var price2 = 6000;
 	var price3 = 3000;
 
+	var average = 10000;
+	var sum = price1 + price2 + price3 ;
+	var add = (sum - average)
+
+	document.write(sum <= average ? "돈 관리 잘 했어요!" : `${add}원 초과`)
 </script>
 </head>
 <body>
