--- a/sources/첫째마당 소스/2장/weight_input_test.html
+++ b/sources/첫째마당 소스/2장/weight_input_test.html
@@ -4,7 +4,14 @@
 <meta charset="UTF-8">
 <title> 적정 몸무게 구하기 </title>
 <script>
+   let name = prompt("당신의 이름은 무엇입니까?");
+   let height = prompt("키는?");
+   let weight = prompt("몸무게는?");
 
+   let normal_w = (height - 100) * 0.9;
+   let result = weight >= normal_w - 5 && weight <= normal_w + 5;
+   result = result ? "적정 체중입니다." : "적정 체중이 아닙니다.";
+   document.write(name +"님은"+result)
 </script>
 </head>
 <body>
